--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <title>TiMMi Transport, Dein umweltbewusster &amp; fairer Kurierdienst.</title>
          <link rel="stylesheet" type="text/css" href="assets/fonts/font-faces.css">
         <link rel="stylesheet" type="text/css" href="semantic/dist/semantic.min.css">
-        <link rel="stylesheet" type="text/css" href="timmi.css">
+        <link rel="stylesheet" type="text/css" href="chrissikay.github.io/timmi.css">
   <script src="assets/jquery-3.2.1.min.js"></script>
   <script src="semantic/dist/components/transition.js"></script>
   <script src="semantic/dist/components/dropdown.js"></script>
