--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
   <!-- Site Properties -->
   <title>TiMMi Transport, Dein umweltbewusster &amp; fairer Kurierdienst.</title>
          <link rel="stylesheet" type="text/css" href="chrissikay.github.io/font-faces.css">
-        <link rel="stylesheet" type="text/css" href="semantic/dist/semantic.min.css">
+        <link rel="stylesheet" type="text/css" href="chrissikay.github.io/semantic.min.css">
         <link rel="stylesheet" type="text/css" href="chrissikay.github.io/timmi.css">
-  <script src="assets/jquery-3.2.1.min.js"></script>
-  <script src="semantic/dist/components/transition.js"></script>
-  <script src="semantic/dist/components/dropdown.js"></script>
-  <script src="semantic/dist/components/visibility.js"></script>
-  <script src="semantic/dist/semantic.min.js"></script>
+  <script src="/jquery-3.2.1.min.js"></script>
+  <script src="s/transition.js"></script>
+  <script src="/dropdown.js"></script>
+  <script src="/visibility.js"></script>
+  <script src="/semantic.min.js"></script>
   <script>
   $(document)
     .ready(function() {
