--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
          <link rel="stylesheet" type="text/css" href="chrissikay.github.io/font-faces.css">
         <link rel="stylesheet" type="text/css" href="chrissikay.github.io/semantic.min.css">
         <link rel="stylesheet" type="text/css" href="chrissikay.github.io/timmi.css">
-  <script src="/jquery-3.2.1.min.js"></script>
-  <script src="s/transition.js"></script>
-  <script src="/dropdown.js"></script>
-  <script src="/visibility.js"></script>
-  <script src="/semantic.min.js"></script>
+  <script src="chrissikay.github.io/jquery-3.2.1.min.js"></script>
+  <script src="chrissikay.github.io/transition.js"></script>
+  <script src="chrissikay.github.io/dropdown.js"></script>
+  <script src="chrissikay.github.io/visibility.js"></script>
+  <script src="chrissikay.github.io/semantic.min.js"></script>
   <script>
   $(document)
     .ready(function() {
